--- a/src/components/location-search/location-search.css
+++ b/src/components/location-search/location-search.css
@@ -23,6 +23,7 @@
   background-color: var(--main-dark-color);
   color: white;
   font-size: 0.8rem;
+  font-family: inherit;
   border: none;
   border-radius: 10px;
   box-shadow: 0 0 5px rgb(171, 171, 171);
@@ -49,11 +50,11 @@
   }
 
   .home-search-btn {
-    font-size: 1.1rem;
+    font-size: 1rem;
   }
 
   .home-search-icon {
-    height: 20px;
-    width: 20px;
+    height: 18px;
+    width: 18px;
   }
 }
