--- a/src/Pages/home/home.css
+++ b/src/Pages/home/home.css
@@ -58,6 +58,50 @@
   }
 }
 
+.home-search-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  & input {
+    width: 250px;
+    height: 30px;
+    margin: 2rem 0;
+    padding: 1.1rem;
+    border-radius: 10px;
+    font-size: 0.7rem;
+  }
+
+  & input::placeholder {
+    color: var(--main-dark-color);
+  }
+}
+
+.home-search-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+  padding: 0.4rem 1.5rem 0.4rem 2rem;
+  background-color: var(--main-dark-color);
+  color: white;
+  font-size: 0.8rem;
+  font-family: inherit;
+  border: none;
+  border-radius: 10px;
+  box-shadow: 0 0 5px rgb(171, 171, 171);
+  cursor: pointer;
+}
+
+.home-search-btn:hover {
+  box-shadow: rgb(171, 171, 171) 0 0 10px;
+}
+
+.home-search-icon {
+  height: 17px;
+  width: 17px;
+}
+
 @media screen and (min-width: 500px) {
   .hero {
     background-image: url("../../assets/home-background-wide.jpg");
@@ -76,6 +120,22 @@
     & p {
       font-size: 0.9rem;
     }
+  }
+
+  .home-search-container input {
+    width: 350px;
+    height: 40px;
+    margin: 3rem 0 2rem;
+    font-size: 0.8rem;
+  }
+
+  .home-search-btn {
+    font-size: 1rem;
+  }
+
+  .home-search-icon {
+    height: 18px;
+    width: 18px;
   }
 }
 
