--- a/src/Pages/stall-details-form/stall-details-form.css
+++ b/src/Pages/stall-details-form/stall-details-form.css
@@ -7,12 +7,12 @@
   max-width: 600px;
   margin: 0 auto;
   padding: 1.5rem 0;
-}
 
-.stall-details-form p {
-  color: var(--main-dark-color);
-  font-size: 0.8rem;
-  margin-bottom: 1rem;
+  & p {
+    color: var(--main-dark-color);
+    font-size: 0.8rem;
+    margin-bottom: 1rem;
+  }
 }
 
 .form-input-container {
@@ -27,40 +27,36 @@
   margin-bottom: 1rem;
   border: 1px solid var(--main-dark-color);
   border-radius: 10px;
-}
 
-.form-autocomplete {
-  width: 100%;
-}
+  & label {
+    /* shift labels up so they sit over the input border */
+    position: absolute;
+    top: -12px;
+    left: 12px;
+    padding: 3px;
+    background-color: white;
+    color: rgb(77, 77, 77);
+    font-size: 0.8rem;
+  }
 
-.form-input-container .text-input {
-  width: 100%;
-  border: none;
-  font-family: inherit;
-}
+  & input {
+    width: 100%;
+    border: none;
+    font-family: inherit;
+  }
 
-.form-input-container textarea {
-  height: 150px;
-  width: 100%;
-  padding: 0.2rem;
-  resize: none;
-  border: none;
-  font-family: inherit;
-}
+  & textarea {
+    height: 150px;
+    width: 100%;
+    padding: 0.2rem;
+    resize: none;
+    border: none;
+    font-family: inherit;
+  }
 
-textarea:focus {
-  outline: none;
-}
-
-.form-input-container label {
-  /* shift labels up so they sit over the input border */
-  position: absolute;
-  top: -12px;
-  left: 12px;
-  padding: 3px;
-  background-color: white;
-  color: rgb(77, 77, 77);
-  font-size: 0.8rem;
+  & textarea:focus {
+    outline: none;
+  }
 }
 
 .form-separator {
@@ -68,16 +64,16 @@ textarea:focus {
   width: 95%;
   margin: 1rem 0 1rem;
   border-top: 1px solid var(--main-dark-color);
-}
 
-.form-separator span {
-  position: absolute;
-  top: -12px;
-  left: 50%;
-  transform: translateX(-50%);
-  white-space: nowrap;
-  padding: 0 1rem;
-  background-color: white;
+  & span {
+    position: absolute;
+    top: -12px;
+    left: 50%;
+    transform: translateX(-50%);
+    white-space: nowrap;
+    padding: 0 1rem;
+    background-color: white;
+  }
 }
 
 .form-btn-container {
