Make images smaller + minor changes

--- a/src/components/open-hours-form/open-hours-form.css
+++ b/src/components/open-hours-form/open-hours-form.css
@@ -34,5 +34,7 @@
 }
 
 .openhours-checkbox {
+  /* Width set to 100% by .form-input-container &input */
+  width: auto !important;
   cursor: pointer;
 }
