--- a/src/Pages/my-stalls/my-stalls.css
+++ b/src/Pages/my-stalls/my-stalls.css
@@ -14,54 +14,36 @@
   margin: 0.5rem 0;
   padding: 1rem;
   box-shadow: 0 0 10px rgb(204, 203, 203);
-}
 
-.stall-update-container h3 {
-  margin-bottom: 0.5rem;
-  font-size: 1.1rem;
-  font-weight: 700;
-}
-
-.stall-update-container h5 {
-  margin: 0;
-  font-size: 0.8rem;
-}
-
-/* CSS nesting - not supported in all browsers */
-.stall-update-container p {
-  font-size: 0.8rem;
-
-  &:first-letter {
-    text-transform: capitalize;
+  & h3 {
+    margin-bottom: 0.5rem;
+    font-size: 1.1rem;
+    font-weight: 700;
   }
-}
 
-.open-update-container {
-  display: flex;
-  align-items: center;
-  gap: 0.6rem;
-  margin-bottom: 0.5rem;
-}
+  & h5 {
+    font-size: 0.8rem;
+  }
 
-.open {
-  color: green;
-}
+  & p {
+    font-size: 0.8rem;
 
-.closed {
-  color: red;
+    &:first-letter {
+      text-transform: capitalize;
+    }
+  }
 }
 
 .update-instock-container {
   width: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   margin-bottom: 1.5rem;
 }
 
 .update-item-container {
   display: grid;
-  grid-template-columns: 10fr 3fr 1.5fr 1.5fr;
+  grid-template-columns: 10fr 2fr 1.5fr 1.5fr;
   align-items: center;
   margin: 0.3rem 0;
 }
@@ -83,7 +65,7 @@
   cursor: pointer;
 
   &:hover {
-    filter: brightness(97%);
+    filter: brightness(95%);
   }
 }
 
@@ -94,12 +76,12 @@
 }
 
 .add-stall-btn {
+  margin-top: 1rem;
   padding: 0.3rem 1.5rem;
   color: var(--main-dark-color);
   background-color: white;
   border: 2px solid var(--main-dark-color);
-  border-radius: 10px;
-  margin: 1rem auto;
+  border-radius: 15px;
   font-size: 0.9rem;
   font-weight: 600;
   text-decoration: none;
