--- a/src/components/dropdown-menu/dropdown-menu.css
+++ b/src/components/dropdown-menu/dropdown-menu.css
@@ -36,7 +36,7 @@
 @media screen and (min-width: 460px) {
   .dropdown-menu {
     position: absolute;
-    top: var(--main-nav-hieght);
+    top: var(--main-nav-height);
     right: 0;
     max-width: 200px;
     box-shadow: 0px 0 10px rgb(88, 88, 88);
