--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 
 :root {
   --main-dark-color: #00801c;
-  --main-light-color: #c2ffb2;
+  --main-light-color: #cbffbd;
   --text-color: rgb(29, 29, 29);
   --modal-background-color: rgba(63, 63, 63, 0.8);
   --main-nav-height: 4rem;
