--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,8 @@
   padding: 0;
   box-sizing: border-box;
   line-height: 1.5;
+  /* Stop elements from highlighting blue when tapped -  mobile */
+  -webkit-tap-highlight-color: transparent;
 }
 
 .app {
