--- a/src/components/stall-preview/stall-preview.css
+++ b/src/components/stall-preview/stall-preview.css
@@ -1,6 +1,6 @@
 .info-window-container {
   --preview-border-radius: 5px;
-  position: absolute;
+  position: fixed;
   display: flex;
   bottom: 70px;
   left: 50%;
